Turn off mouse to help vi yank -> clipboard

--- a/tmux.conf
+++ b/tmux.conf
@@ -31,8 +31,8 @@ set-option -g default-shell /bin/zsh
 # no command delay
 set -sg escape-time 0
 
-# Mouse on
-set -g mouse on
+# Mouse off
+set -g mouse off
 
 # Use Vim keys to move around Copy Mode
 setw -g mode-keys vi
