--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,9 @@
 unbind r
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
+# Re-number windows
+bind R move-window -r
+
 # Prefix key C-b is not acceptable -- Vim uses it
 unbind C-b
 set-option -g prefix C-a
@@ -44,3 +47,5 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 # For clearing screen
 # send-keys -R resets the terminal state
 bind -n C-k send-keys -R
+
+bind -n C-t choose-tree
