--- a/tmux.conf
+++ b/tmux.conf
@@ -49,3 +49,6 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 bind -n C-k send-keys -R
 
 bind -n C-t choose-tree
+
+# tmux-thumbs
+run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
