--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,12 @@ bind l select-pane -R
 bind-key v split-window -h
 bind-key b split-window -v
 
+# resize window splits
+bind-key -r '+' resize-pane -U 10
+bind-key -r '-' resize-pane -D 10
+bind-key -r '<' resize-pane -L 10
+bind-key -r '>' resize-pane -R 10
+
 # Start numbering at 1
 set -g base-index 1
 setw -g pane-base-index 1
