--- a/tmux.conf
+++ b/tmux.conf
@@ -56,5 +56,8 @@ bind -n C-k send-keys -R
 
 bind -n C-t choose-tree
 
-# tmux-thumbs
-run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+# only this line might not be enough
+set -g default-terminal "xterm-256color"
+
+# Needs this line also to overrides the default color
+set-option -ga terminal-overrides ",xterm-256color:Tc"
