--- a/tmux.conf
+++ b/tmux.conf
@@ -47,7 +47,7 @@ set -g mouse off
 setw -g mode-keys vi
 bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard'
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # For clearing screen
