--- a/tmux.conf
+++ b/tmux.conf
@@ -61,3 +61,6 @@ set -g default-terminal "xterm-256color"
 
 # Needs this line also to overrides the default color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
+
+# tmux-resurrect
+set -g @plugin 'tmux-plugins/tmux-resurrect'
