--- a/tmux.conf
+++ b/tmux.conf
@@ -50,6 +50,9 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard'
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
+# increase scrollback buffer size
+set -g history-limit 50000
+
 # For clearing screen
 # send-keys -R resets the terminal state
 bind -n C-k send-keys -R
@@ -62,5 +65,13 @@ set -g default-terminal "xterm-256color"
 # Needs this line also to overrides the default color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
+# tmux plugin manager (tpm)
+set -g @plugin 'tmux-plugins/tpm'
+
 # tmux-resurrect
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
