Use 'N' for re-numbering tmux windows since 'R' is now used for restoring tmux sessions

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,7 +7,7 @@ unbind r
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Re-number windows
-bind R move-window -r
+bind N move-window -r
 
 # Prefix key C-b is not acceptable -- Vim uses it
 unbind C-b
