Change prefix to C-j, increase history buffer, and save neovim state

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,8 +11,8 @@ bind N move-window -r
 
 # Prefix key C-b is not acceptable -- Vim uses it
 unbind C-b
-set-option -g prefix C-a
-bind C-a send-prefix
+set-option -g prefix C-j
+bind C-j send-prefix
 
 # hjkl pane traversal
 bind h select-pane -L
@@ -51,7 +51,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -select
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 # increase scrollback buffer size
-set -g history-limit 50000
+set -g history-limit 100000
 
 # For clearing screen
 # send-keys -R resets the terminal state
@@ -72,6 +72,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
