--- a/tmux.conf
+++ b/tmux.conf
@@ -49,6 +49,7 @@ bind P paste-buffer
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'pbcopy -in -selection clipboard'
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind-key -T prefix j copy-mode
 
 # increase scrollback buffer size
 set -g history-limit 100000
